# root-utils

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  api.md  doxygen.sh
docs/: FileUtils_8h.html  FileUtils_8h.js  FileUtils_8h_source.html  FitUtils_8h.html  FitUtils_8h.js  FitUtils_8h_source.html  HistUtils_8h.html  HistUtils_8h.js  HistUtils_8h_source.html  StringUtils_8h.html  StringUtils_8h.js  StringUtils_8h_source.html  UiUtils_8h.html  UiUtils_8h.js  UiUtils_8h_source.html  annotated.html  annotated_dup.js  classFitUtils_1_1CrystalBallFunctionObject-members.html  classFitUtils_1_1CrystalBallFunctionObject.html  classFitUtils_1_1CrystalBallFunctionObject.js  classes.html  dir_1dc233ed22c5cd7196a5aa49388099a2.html  dir_293df0971d2803358eec2be365b193ed.html  dir_45b9293d3daaa82c00b5908f14ebb805.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7b8178ed6fd00e90dce8f7ed81078945.html  dir_90d130ab5d4e339c9b496a874624e6d1.html  dir_cf2e7ddd834b1add68cb4892b92bb385.html  dir_e8f09f91c578da96669802a3b73b2ff8.html  dir_ed0b9bb19d2f3ececb3b7b67810970dd.html  dir_f7655dd88ec59852ae8905f107c9a78a.html  files.html  functions.html  functions_vars.html  index.html  md_api.html  menudata.js  namespaceFileUtils.html  namespaceFileUtils.js  (+23 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  namespaces_1.js  namespaces_2.js  namespaces_3.js  pages_0.js  (+8 more)
src/: FileUtils.cpp  FileUtils.h  FitUtils.cpp  FitUtils.h  HistUtils.cpp  HistUtils.h  StringUtils.cpp  StringUtils.h  UiUtils.cpp  UiUtils.h
wolfram/: crystal-ball-reversed.nb  crystal-ball.nb
